--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mammoth": "^1.11.0",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
+    "nodemailer": "^6.10.1",
     "openai": "^6.17.0",
     "pdf-parse": "^2.4.5",
     "prisma": "^6.19.2",
