--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "openai": "^6.17.0",
     "pdf-parse": "^2.4.5",
     "prisma": "^6.19.2",
+    "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "rtf-parser": "^1.3.3",
+    "stripe": "^20.3.0",
     "tailwind-merge": "^3.4.0",
     "turndown": "^7.2.2",
     "unpdf": "^1.4.0",
