--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postinstall": "prisma generate",
+    "postinstall": "node scripts/postinstall.js",
     "start": "next start",
     "lint": "eslint",
     "db:push": "prisma db push",
@@ -47,6 +47,8 @@
     "rtf-parser": "^1.3.3",
     "stripe": "^20.3.0",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4",
+    "@tailwindcss/postcss": "^4",
     "turndown": "^7.2.2",
     "unpdf": "^1.4.0",
     "uuid": "^13.0.0",
@@ -54,7 +56,6 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.9",
@@ -64,7 +65,6 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
-    "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "typescript": "^5"
   }
