--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "prebuild": "node scripts/prebuild.js",
     "build": "next build",
     "postinstall": "node scripts/postinstall.js",
-    "start": "next start",
+    "start": "node scripts/start-with-migrate.js",
     "lint": "eslint",
     "db:push": "prisma db push",
     "db:seed": "npx tsx prisma/seed.ts"
