--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "db:push": "prisma db push",
     "db:seed": "npx tsx prisma/seed.ts"
   },
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.2",
