--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:migrate": "node scripts/build-with-migrate.js",
     "postinstall": "node scripts/postinstall.js",
     "start": "node scripts/start-with-migrate.js",
     "lint": "eslint",
@@ -51,6 +52,7 @@
     "@tailwindcss/postcss": "^4",
     "turndown": "^7.2.2",
     "unpdf": "^1.4.0",
+    "tsx": "^4.21.0",
     "uuid": "^13.0.0",
     "word-extractor": "^1.0.4",
     "zod": "^4.3.6"
@@ -65,7 +67,6 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
-    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
