--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-  "buildCommand": "prisma generate && next build"
+  "buildCommand": "prisma generate && npx prisma migrate deploy && npm run db:seed && next build",
+  "framework": "nextjs"
 }
