--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "prisma generate && npx prisma migrate deploy && npm run db:seed && next build",
+  "buildCommand": "prisma generate && next build",
   "framework": "nextjs"
 }
