--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@tailwindcss/postcss": "^4",
     "bcryptjs": "^3.0.3",
     "cheerio": "^1.2.0",
     "class-variance-authority": "^0.7.1",
@@ -45,14 +46,14 @@
     "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-google-recaptcha-v3": "^1.11.0",
     "rtf-parser": "^1.3.3",
     "stripe": "^20.3.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4",
-    "@tailwindcss/postcss": "^4",
+    "tsx": "^4.21.0",
     "turndown": "^7.2.2",
     "unpdf": "^1.4.0",
-    "tsx": "^4.21.0",
     "uuid": "^13.0.0",
     "word-extractor": "^1.0.4",
     "zod": "^4.3.6"
