--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "prisma generate && next build",
+  "buildCommand": "node scripts/postinstall.js && next build",
   "framework": "nextjs"
 }
