feat(auth): add NextAuth handlers route to fix login ClientFetchError chore(dev): add dev-clean-start script to kill port 3000 and remove .next before dev seo: optimize meta descriptions on pricing, demo, docs, contact, signup, integrations, API docs, privacy, terms, refund

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "node scripts/postinstall.js",
     "start": "node scripts/start-with-migrate.js",
     "lint": "eslint",
+    "dev:clean": "node scripts/dev-clean-start.js && next dev",
     "db:push": "prisma db push",
     "db:seed": "npx tsx prisma/seed.ts"
   },
