--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
     "mammoth": "^1.11.0",
+    "marked": "^17.0.1",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "nodemailer": "^6.10.1",
